--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "wrap-muxrpc-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "wrap functions of a muxrpc API with a custom wrapper. Useful with pull-reconnect",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape test/*.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/regular/wrap-muxrpc-api.git"
   },
-  "keywords": [],
+  "keywords": ["muxrpc", "pull-reconnect"],
   "author": "Jan Bölsche <jan@lagomorph.de> (https://regular.codes/)",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/regular/wrap-muxrpc-api/issues"
   },
-  "homepage": "https://github.com/regular/wrap-muxrpc-api#readme"
+  "homepage": "https://github.com/regular/wrap-muxrpc-api#readme",
+  "dependencies": {
+    "traverse": "^0.6.6"
+  },
+  "devDependencies": {
+    "tape": "^5.0.1"
+  }
 }
