--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wrap-muxrpc-api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "wrap functions of a muxrpc API with a custom wrapper. Useful with pull-reconnect",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/regular/wrap-muxrpc-api.git"
   },
-  "keywords": ["muxrpc", "pull-reconnect"],
+  "keywords": [
+    "muxrpc",
+    "pull-reconnect"
+  ],
   "author": "Jan Bölsche <jan@lagomorph.de> (https://regular.codes/)",
   "license": "MIT",
   "bugs": {
